--- a/projects.html
+++ b/projects.html
@@ -31,8 +31,8 @@
         </div>
         </div>
 
-        <div class="cards style=width:40%; height: 30%;">
-                <div class="card" >
+        <div class="cards">           
+                <div class="card">
                     <a href="https://talktominion.netlify.app/">
                     <img src="img/min.png" alt="Avatar" style="width:100%">
                     <div class="topic">
@@ -56,15 +56,34 @@
                     </div>
                     <p>Know what your emoji means</p>
                 </div></a>
+        </div>
+            <div class="cards"> 
                 <div class="card" >
                     <a href="https://findyourpeaceherre.netlify.app/">
-                    <img src="img/music.jpg" alt="Avatar" style="width:100%">
+                    <img src="img/music.png" alt="Avatar" style="width:100%">
                     <div class="topic">
                       <h4><b>Find your peace</b></h4> 
                     </div>
                     <p>Listen to what I listen to and help yourself with some good music</p>
+                </div></a>               
+                <div class="card" >
+                    <a href="https://repl.it/@melvin175/CLI-Quiz-on-India-1#index.js">
+                    <img src="img/ind.jpg" alt="Avatar" style="width:100%">
+                    <div class="topic">
+                      <h4><b>CLI Quiz on India</b></h4> 
+                    </div>
+                    <p>Take a quiz on India</p>
                 </div></a>
-        </div>
+                <div class="card" >
+                    <a href="https://repl.it/@melvin175/CLI-Quiz-on-Universe#index.js">
+                    <img src="img/uni.jpg" alt="Avatar" style="width:100%">
+                    <div class="topic">
+                      <h4><b>CLI Quiz on Universe</b></h4> 
+                    </div>
+                    <p>Take a quiz on Universe</p>
+                </div></a>
+            </div>
+        
         <footer>
             <hr style="width:auto;height:10px;background-color: yellow;border: none;border-radius:10px;margin-bottom: rem;">
             <div class="contact">Follow me on.<br>
