--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,11 @@
                     <div class="topic">
                       <h4><b>Talk to Minion</b></h4> 
                     </div>
-                    <p>Talk in the language of Minion!</p>
+                 <a href="https://github.com/melvin175/Talktominion">
+           <button  style="font-size:15px"> 
+            Source code
+           </button>
+         </a>
                 </div></a>
                 <div class="card" >
                     <a href="https://talktoyoda.netlify.app/">
@@ -46,7 +50,11 @@
                     <div class="topic">
                       <h4><b>Talk to Yoda</b></h4> 
                     </div>
-                    <p>Talk in the language of Yoda!</p>
+                    <a href="https://github.com/melvin175/Talk-to-yoda">
+           <button  style="font-size:15px"> 
+            Source code
+           </button>
+         </a>
                 </div></a>
                 <div class="card" >
                     <a href="https://emdictionary.netlify.app//">
@@ -54,7 +62,11 @@
                     <div class="topic">
                       <h4><b>Emoji dictonary</b></h4> 
                     </div>
-                    <p>Know what your emoji means</p>
+                     <a href="https://github.com/melvin175/emojidictionary">
+           <button  style="font-size:15px"> 
+            Source code
+           </button>
+         </a>
                 </div></a>
         </div>
             <div class="cards"> 
@@ -64,7 +76,11 @@
                     <div class="topic">
                       <h4><b>Find your peace</b></h4> 
                     </div>
-                    <p>Listen to what I listen to and help yourself with some good music</p>
+                      <a href="https://github.com/melvin175/Find-your-peace">
+           <button  style="font-size:15px"> 
+            Source code
+           </button>
+         </a>
                 </div></a>               
                 <div class="card" >
                     <a href="https://repl.it/@melvin175/CLI-Quiz-on-India-1#index.js">
@@ -72,7 +88,11 @@
                     <div class="topic">
                       <h4><b>CLI Quiz on India</b></h4> 
                     </div>
-                    <p>Take a quiz on India</p>
+                      <a href="https://github.com/melvin175/CLI-Quiz-on-India">
+           <button  style="font-size:15px"> 
+            Source code
+           </button>
+         </a>
                 </div></a>
                 <div class="card" >
                     <a href="https://repl.it/@melvin175/CLI-Quiz-on-Universe#index.js">
@@ -80,7 +100,11 @@
                     <div class="topic">
                       <h4><b>CLI Quiz on Universe</b></h4> 
                     </div>
-                    <p>Take a quiz on Universe</p>
+                          <a href="https://github.com/melvin175/CLI-Quiz-on-Universe">
+           <button  style="font-size:15px"> 
+            Source code
+           </button>
+         </a>
                 </div></a>
             </div>
         
